--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -24,6 +24,17 @@
     border: 1px solid rgba(0, 0, 255, 0.8);
 }
 
+.singleMessage {
+    border: 1px solid #efefef;
+}
+
+.singleMessage .userName {
+    font-weight: bold;
+    font-style: italic;
+    color: #3d773d;
+    
+}
+
 .btn.danger,
 .alert-message.danger,
 .btn.danger:hover,
