--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -24,6 +24,11 @@
     border: 1px solid rgba(0, 0, 255, 0.8);
 }
 
+.messages {
+    max-height: 200px;
+    overflow: scroll;
+}
+
 .singleMessage {
     border: 1px solid #efefef;
 }
